--- a/js-numerals/numeric-converter-app/package.json
+++ b/js-numerals/numeric-converter-app/package.json
@@ -18,6 +18,7 @@
     "concat": "^1.0.3",
     "cookie-parser": "~1.4.5",
     "debug": "~4.2.0",
+    "express": "~4.17.1",
     "express-handlebars": "^5.1.0",
     "fix": "0.0.6",
     "http-errors": "~1.8.0",
