--- a/js-numerals/numeric-converter-app/package.json
+++ b/js-numerals/numeric-converter-app/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "audit": "0.0.6",
     "autoprefixer": "^10.0.0",
+    "bootstrap": "^4.5.2",
     "concat": "^1.0.3",
     "cookie-parser": "~1.4.5",
     "debug": "~4.2.0",
@@ -23,6 +24,8 @@
     "fix": "0.0.6",
     "http-errors": "~1.8.0",
     "jade": "~1.11.0",
+    "live-server": "^1.2.1",
+    "livereload": "^0.9.1",
     "morgan": "~1.10.0",
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.4",
